--- a/package.yaml
+++ b/package.yaml
@@ -28,6 +28,7 @@ dependencies:
 - time == 1.8.*
 - transformers == 0.5.*
 - unordered-containers == 0.2.*
+- yaml == 0.11.*
 
 library:
   source-dirs: src
