Use lenses and combine state with Env module

--- a/package.yaml
+++ b/package.yaml
@@ -26,6 +26,7 @@ dependencies:
 - gi-gtk == 3.*
 - gi-gtk-declarative == 0.4.*
 - gi-gtk-declarative-app-simple == 0.4.*
+- microlens-platform == 0.3.*
 - mtl == 2.2.*
 - text == 1.2.*
 - time == 1.8.*
